--- a/frontend/src/app/core/components/not-found/not-found.component.html
+++ b/frontend/src/app/core/components/not-found/not-found.component.html
@@ -14,7 +14,7 @@
     <div class="mt-10">
       <a
         routerLink="/auth/login"
-        class="inline-flex bg-violet-800 items-center rounded-md border border-transparent bg-primary px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-primary-light focus:ring-offset-2"
+        class="inline-flex items-center rounded-lg bg-violet-700 px-6 py-2.5 text-sm font-semibold text-white shadow-lg hover:bg-violet-800 hover:shadow-xl focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2 transition-all"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
