--- a/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
+++ b/frontend/src/app/features/auth/components/patient-register-form/patient-register-form.component.html
@@ -59,7 +59,7 @@
   <div
     *ngIf="apiError"
     #apiErrorDiv
-    class="bg-red-50/80 border border-red-200 rounded-xl p-4"
+    class="bg-red-50/80 border border-red-200 rounded-lg p-4"
   >
     <div class="flex items-start">
       <svg
